cli/tests/testdata/worker_drop_handle_race.js.out
error: Uncaught (in worker "") Error
  throw new Error();
        ^
    at [WILDCARD]/workers/drop_handle_race.js:2:9
    at Object.action (deno:ext/web/02_timers.js:[WILDCARD])
    at handleTimerMacrotask (deno:ext/web/02_timers.js:[WILDCARD])
error: Uncaught (in worker "") (in promise) Error: Unhandled error event.
    at deno:ext/web/16_report_error.js:[WILDCARD]
error: Uncaught (in promise) Error: Unhandled error in child worker.
    at Worker.#pollControl (deno:runtime/js/11_workers.js:[WILDCARD])
